# erim_xml

./: .gitignore  Makefile  Makefile.in  README.md  aclocal.m4  add_custom_schema.sh  autogen.sh  bootstrap  configure  configure.ac  rebar.config  rebar.config.in  rebar.config.script  rebar3
.rebar/: erlcinfo
c_src/: Makefile  Makefile.in  erim_driver.c  erim_driver.h  erim_xml.c  erim_xml.h  erim_xml_expat.c  erim_xml_expat_legacy.c  erim_xml_libxml2.c
ebin/: erim_xml.app
include/: erim_xml.hrl
include/internal/: erim_known_attrs.hrl  erim_known_elems.hrl  erim_known_nss.hrl
priv/: Makefile  Makefile.in  erim_known.es
src/: erim_known_attrs.erl  erim_known_elems.erl  erim_known_nss.erl  erim_xml.app.src  erim_xml.app.src.in  erim_xml.erl  erim_xml_app.erl  erim_xml_internals.erl  erim_xml_sup.erl  erim_xml_utils.erl
